test/corpus/paragraph.txt
==============
Paragraph
==============
Paragraph one

---
(document
    (paragraph
        (text)))

==============
Two Paragraphs
==============
Paragraph one

Paragraph two

---
(document
    (paragraph
        (text))
    (paragraph
        (text)))

==============
Multiline paragraph
==============
Paragraph one
multiline

---
(document
    (paragraph
        (text)))

==============
Mix paragraph
==============
Paragraph one
multiline

Paragraph two

---
(document
    (paragraph
        (text))
    (paragraph
        (text)))
